major: used full qualified collection names

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,13 +1,13 @@
 ---
 - name: Download repo key
-  shell:
+  ansible.builtin.shell:
     cmd: "curl -sSL https://ngrok-agent.s3.amazonaws.com/ngrok.asc | gpg --dearmor --output {{ ngrok_keyring }}"
     creates: "{{ ngrok_keyring }}"
   tags:
     - ngrok
 
 - name: Add apt repository
-  apt_repository:
+  ansible.builtin.apt_repository:
     repo: "deb [arch={{ ngrok_arch }} signed-by={{ ngrok_keyring }}] https://ngrok-agent.s3.amazonaws.com buster main"
     filename: ngrok
     update_cache: True
@@ -18,7 +18,7 @@
 - name: Install required packages
   loop:
     - ngrok
-  package:
+  ansible.builtin.package:
     name: "{{ item }}"
     state: present
   tags:
